<resources>
    <string name="app_name">Calculadora de Gorjeta</string>
    <string name="hint_valor_text_input">Digite um valor ex: 35.50</string>
    <string name="logo_description">Imagem de duas moedas (logo)</string>
    <string name="total">Total</string>
    <string name="Gorjeta">Gorjeta</string>
    <string name="porcentagem">0%</string>
    <string name="gorjeta_valor">R$O.OO</string>
    <string name="total_valor">R$120.0</string>
</resources>